apps/api-hub/overlays/environments/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-hub
    env: staging
  name: api-hub
  namespace: staging
